fixed hover bug z-index

--- a/css/mainSection.css
+++ b/css/mainSection.css
@@ -19,6 +19,7 @@
   height: calc(100vh - 3rem); /* ارتفاع کامل صفحه منهای فاصله از بالا */
   overflow: auto; /* در صورت نیاز، اسکرول را فعال می‌کند */
   transition: margin 0.3s ease; /* اضافه کردن انیمیشن نرم برای فاصله‌ها */
+  z-index: 1; /* لایه کمتر برای قرارگیری زیر متن هاور */
 }
 
 .profile {
